@@ -1,6 +1,6 @@
 {"name": "Open_vSwitch",
  "version": "8.4.0",
- "cksum": "2738838700 27127",
+ "cksum": "1474151405 27231",
  "tables": {
    "Open_vSwitch": {
      "columns": {
@@ -461,6 +461,9 @@
          "type": {"key": "string", "value": "integer",
                   "min": 0, "max": "unlimited"},
          "ephemeral": true},
+       "filter": {
+         "type": {"key": {"type": "string"},
+                  "min": 0, "max": 1}},
        "external_ids": {
          "type": {"key": "string", "value": "string",
                   "min": 0, "max": "unlimited"}}}},
